--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.5",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-bootsplash": "^5.2.2",
     "react-native-mmkv": "^2.11.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.8.2",
