--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-native": "0.73.2",
     "react-native-bootsplash": "^5.2.2",
     "react-native-mmkv": "^2.11.0",
+    "react-native-permissions": "^4.0.4",
+    "react-native-reanimated": "^3.6.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
