added calendar event feature

--- a/ios/ArtInstituteOfChicagoCatalog/Info.plist
+++ b/ios/ArtInstituteOfChicagoCatalog/Info.plist
@@ -31,6 +31,8 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSCalendarsWriteOnlyAccessUsageDescription</key>
+	<string>This app requires write-only access to your calendars to create events for you.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UIAppFonts</key>
