--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "linkAssets": "npx react-native-asset",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
